--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 </head>
 <body>
     <nav> <a href="IDK.html"><img src="./Hot Beans Logo transparant.png" alt="Hot Beans Logo" height="100"></a>
-        <a href="Home.html">Home</a>
-        <a href="About.html">About</a>
-        <a href="Contact.html">Contact</a>
-        <a href="Job_Specification.html">Job Specification&nbsp;</a>
-        <a href="Blog.html">Blog</a>
+        <a href="https://mightyemmanuelyt.github.io/HomePage/">Home</a>
+        <a href="https://mightyemmanuelyt.github.io/AboutPage/">About</a>
+        <a href="https://mightyemmanuelyt.github.io/MeetTeamPage/">Contact</a>
+        <a href="https://mightyemmanuelyt.github.io/JobSpecPage/">Job Specification&nbsp;</a>
+        <a href="https://mightyemmanuelyt.github.io/BlogPage/">Blog</a>
     </nav>
 	
 <div class="container">
