--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <nav> <a href="IDK.html"><img src="./Hot Beans Logo transparant.png" alt="Hot Beans Logo" height="100"></a>
+    <nav> <a href="https://mightyemmanuelyt.github.io/TheCreator/"><img src="./Hot Beans Logo transparant.png" alt="Hot Beans Logo" height="100"></a>
         <a href="https://mightyemmanuelyt.github.io/HomePage/">Home</a>
         <a href="https://mightyemmanuelyt.github.io/AboutPage/">About</a>
         <a href="https://mightyemmanuelyt.github.io/MeetTeamPage/">Contact</a>
